gccida/g0/emit_cmp_and_jump_insn_1
/data/output_dir/patch/gcc/ida/gcc/O0/gcc-gcc-O0/emit_cmp_and_jump_insn_1/src/optabs.c:3733:47: error: must use 'enum' tag to refer to type 'machine_mode'
void  emit_cmp_and_jump_insn_1( rtx x, rtx y, machine_mode mode, rtx_code comparison, int unsignedp, rtx label) 
                                              ^
                                              enum 
/data/output_dir/patch/gcc/ida/gcc/O0/gcc-gcc-O0/emit_cmp_and_jump_insn_1/src/optabs.c:3733:66: error: must use 'enum' tag to refer to type 'rtx_code'
void  emit_cmp_and_jump_insn_1( rtx x, rtx y, machine_mode mode, rtx_code comparison, int unsignedp, rtx label) 
                                                                 ^
                                                                 enum 
/data/output_dir/patch/gcc/ida/gcc/O0/gcc-gcc-O0/emit_cmp_and_jump_insn_1/src/optabs.c:3747:1: error: must use 'enum' tag to refer to type 'mode_class'
mode_class classa; // [rsp+3Ch] [rbp-14h] 
^
enum 
/data/output_dir/patch/gcc/ida/gcc/O0/gcc-gcc-O0/emit_cmp_and_jump_insn_1/src/machmode.h:52:30: note: enum 'mode_class' is hidden by a non-type declaration of 'mode_class' here
extern const enum mode_class mode_class[NUM_MACHINE_MODES];
                             ^
/data/output_dir/patch/gcc/ida/gcc/O0/gcc-gcc-O0/emit_cmp_and_jump_insn_1/src/optabs.c:3749:1: error: must use 'enum' tag to refer to type 'machine_mode'
machine_mode wider_mode; // [rsp+4Ch] [rbp-4h] 
^
enum 
/data/output_dir/patch/gcc/ida/gcc/O0/gcc-gcc-O0/emit_cmp_and_jump_insn_1/src/optabs.c:3752:10: error: use of undeclared identifier 'mode_class_0'; did you mean 'mode_class'?
classa = mode_class_0[mode]; 
         ^~~~~~~~~~~~
         mode_class
/data/output_dir/patch/gcc/ida/gcc/O0/gcc-gcc-O0/emit_cmp_and_jump_insn_1/src/machmode.h:52:30: note: 'mode_class' declared here
extern const enum mode_class mode_class[NUM_MACHINE_MODES];
                             ^
/data/output_dir/patch/gcc/ida/gcc/O0/gcc-gcc-O0/emit_cmp_and_jump_insn_1/src/optabs.c:3762:6: error: use of undeclared identifier 'insn_data_0'; did you mean 'insn_data'?
if ( insn_data_0[icode].operand->predicate( test, wider_mode) ) 
     ^~~~~~~~~~~
     insn_data
/data/output_dir/patch/gcc/ida/gcc/O0/gcc-gcc-O0/emit_cmp_and_jump_insn_1/src/recog.h:249:31: note: 'insn_data' declared here
extern const struct insn_data insn_data[];
                              ^
/data/output_dir/patch/gcc/ida/gcc/O0/gcc-gcc-O0/emit_cmp_and_jump_insn_1/src/optabs.c:3762:43: error: called object type '<dependent type>' is not a function or function pointer
if ( insn_data_0[icode].operand->predicate( test, wider_mode) ) 
                                          ^
/data/output_dir/patch/gcc/ida/gcc/O0/gcc-gcc-O0/emit_cmp_and_jump_insn_1/src/optabs.c:3766:6: error: use of undeclared identifier 'insn_data_0'; did you mean 'insn_data'?
v6 = insn_data_0[icode].genfun( test, xa, ya, label); 
     ^~~~~~~~~~~
     insn_data
/data/output_dir/patch/gcc/ida/gcc/O0/gcc-gcc-O0/emit_cmp_and_jump_insn_1/src/recog.h:249:31: note: 'insn_data' declared here
extern const struct insn_data insn_data[];
                              ^
/data/output_dir/patch/gcc/ida/gcc/O0/gcc-gcc-O0/emit_cmp_and_jump_insn_1/src/optabs.c:3766:31: error: called object type '<dependent type>' is not a function or function pointer
v6 = insn_data_0[icode].genfun( test, xa, ya, label); 
                              ^
/data/output_dir/patch/gcc/ida/gcc/O0/gcc-gcc-O0/emit_cmp_and_jump_insn_1/src/optabs.c:3776:6: error: use of undeclared identifier 'insn_data_0'; did you mean 'insn_data'?
v7 = insn_data_0[icodea].genfun( xb); 
     ^~~~~~~~~~~
     insn_data
/data/output_dir/patch/gcc/ida/gcc/O0/gcc-gcc-O0/emit_cmp_and_jump_insn_1/src/recog.h:249:31: note: 'insn_data' declared here
extern const struct insn_data insn_data[];
                              ^
/data/output_dir/patch/gcc/ida/gcc/O0/gcc-gcc-O0/emit_cmp_and_jump_insn_1/src/optabs.c:3776:32: error: called object type '<dependent type>' is not a function or function pointer
v7 = insn_data_0[icodea].genfun( xb); 
                               ^
/data/output_dir/patch/gcc/ida/gcc/O0/gcc-gcc-O0/emit_cmp_and_jump_insn_1/src/optabs.c:3795:6: error: use of undeclared identifier 'insn_data_0'; did you mean 'insn_data'?
v9 = insn_data_0[icodeb].genfun( xc, yb); 
     ^~~~~~~~~~~
     insn_data
/data/output_dir/patch/gcc/ida/gcc/O0/gcc-gcc-O0/emit_cmp_and_jump_insn_1/src/recog.h:249:31: note: 'insn_data' declared here
extern const struct insn_data insn_data[];
                              ^
/data/output_dir/patch/gcc/ida/gcc/O0/gcc-gcc-O0/emit_cmp_and_jump_insn_1/src/optabs.c:3795:32: error: called object type '<dependent type>' is not a function or function pointer
v9 = insn_data_0[icodeb].genfun( xc, yb); 
                               ^
13 errors generated.
make: *** [/data/output_dir/patch/gcc/ida/gcc/O0/gcc-gcc-O0/emit_cmp_and_jump_insn_1/src/obj/optabs.o] Error 1
